--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>color pallet generator</title>
-    <link rel="icon" type="image/png" href="/images/last-icon2.png" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="icon" type="image/png" href="./images/last-icon2.png" />
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
     <header class="header">
-      <a href="/index.html" style="text-decoration: none"
+      <a href="./index.html" style="text-decoration: none"
         ><h1 class="h1-main">colorio</h1></a
       >
       <nav class="navbar">
-        <a href="/pallet.html">Start</a>
+        <a href="./pallet.html">Start</a>
       </nav>
     </header>
     <footer><p>Made by Kiarash</p></footer>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
