--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body class="colo">
     <header class="header-share">
-      <a href="/index.html" style="text-decoration: none"><h1>colorio</h1></a>
+      <a href="./index.html" style="text-decoration: none"><h1>colorio</h1></a>
       <nav class="navbar">
-        <a href="/pallet.html">color pallet</a>
+        <a href="./pallet.html">color pallet</a>
         <a href="#">about</a>
       </nav>
     </header>
