--- a/pallet.html
+++ b/pallet.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pallet</title>
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
     <header class="header-share">
-      <a href="/index.html" style="text-decoration: none"><h1>colorio</h1></a>
+      <a href="./index.html" style="text-decoration: none"><h1>colorio</h1></a>
       <nav class="navbar">
-        <a href="/pallet.html">color pallet</a>
+        <a href="./pallet.html">color pallet</a>
       </nav>
     </header>
     <div class="instruction">
@@ -40,6 +40,6 @@
       <button class="generate" onclick="makeRandomColor()">Generate</button>
     </footer>
 
-    <script src="/js/pallet.js"></script>
+    <script src="./js/pallet.js"></script>
   </body>
 </html>
